--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<img src="test.jpg" alt="Kyle" style="width:1000px;height:1330px;">
+---
+# You don't need to edit this file, it's empty on purpose.
+# Edit theme's home layout instead if you wanna make some changes
+# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+layout: home
+author_profile: true
+---
